Graph is now centered on screen by default

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -430,7 +430,7 @@ a.jsavdialogclose {
 
 /********* TREE / GRAPH DATA STRUCTURE *******/
 
-.jsavtree {
+.jsavtree, .jsavgraph {
   position: relative;
 }
 .jsavtreenode, .jsavgraphnode {
