Added white background to edge labels

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -449,7 +449,7 @@ a.jsavdialogclose {
 }
 
 .jsavedgelabel {
-  text-shadow: 1px 1px 0 white, -1px -1px white;
+  background-color: #fff;
   z-index: 700;
 }
 
