--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -532,4 +532,11 @@ ul.jsavcode {
 }
 .jsavplaying .jsavshutter {
   display: block;
+  /* prevent text selection when playing */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
