Fixed array unhighlight style reset bug (see #89)

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -27,10 +27,9 @@
   margin-right: auto;
 }
 
-.jsavhighlight .jsavvalue, .jsavarray.jsavbararray .jsavindex.jsavhighlight .jsavvalue{
-  background-color: yellow;
-  border-width: 4px;
-  font-size: 120%;  
+.jsavhighlight, .jsavhighlight .jsavvalue, .jsavarray.jsavbararray .jsavindex.jsavhighlight .jsavvalue{
+  background-color: yellow !important;
+  color: black !important;
 }
 
 .jsavvalue {
