--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -5,6 +5,13 @@
   border: 1px solid black;
   background-color: white;
   position: relative;
+  /* prevent text selection within container */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .jsavcanvas {
   position: relative;
@@ -21,6 +28,8 @@
   color: black;
   opacity: 1;
   padding: 0;
+  /* prevent text cursor on nodes*/
+  cursor: default;
 }
 .jsavcenter {
   margin-left: auto;
