Refactoring of array layout and HTML template in preparation for #95

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -132,6 +132,8 @@
   border: none;
   background-color: #ddd;
   margin-left: 2px;
+  float: left;
+  position: relative;
 }
 .jsavbararray .jsavvalue {
   z-index: 100;
