Added Markdown file which can generate almost identical documentation.

--- a/doc/apidoc.css
+++ b/doc/apidoc.css
@@ -47,6 +47,10 @@ pre, code, var {
   border: 1px dashed #bbb;
   border-radius: 3px;
 }
+pre code {
+  padding: 0px;
+  border: none;
+}
 #toc {
   font-size: 0.8em;
 }
