--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -30,7 +30,9 @@
   padding: 0;
   /* prevent text cursor on nodes*/
   cursor: default;
+  box-shadow: 5px 5px 5px #666;
 }
+
 .jsavcenter {
   margin-left: auto;
   margin-right: auto;
@@ -126,6 +128,10 @@
   overflow: visible;
   padding-bottom: 30px;
 }
+.jsavbararray .jsavnode {
+  /* remove shadow from the white bars */
+  box-shadow: none;
+}
 .jsavbararray .jsavindex {
   height: 100%;
   vertical-align: bottom;
@@ -145,6 +151,7 @@
   -ms-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
+  box-shadow: 5px 5px 5px #666;
 }
 .jsavbararray .jsavvalue span {
   position: absolute;
