Small 'box' shown below pointers; automatically add jsavnullpointer class to null pointers

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -533,6 +533,35 @@ ul.jsavcode {
   display: none !important;
 }
 
+/******** POINTER STRUCTURE ****/
+.jsavpointer .jsavpointerarea {
+  border: 1px solid black;
+  height: 10px;
+  width: 10px;
+  margin: 0 auto;
+  position: relative;
+}
+.jsavnullpointer .jsavpointerarea:after {
+  content: "";
+  display: block;
+  width: 14px; /* sqrt(width^2+height^2) */
+  height: 1px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: red;
+  -webkit-transform: rotate(-45deg);
+  -webkit-transform-origin: right top;
+  -ms-transform: rotate(-45deg);
+  -ms-transform-origin: right top;
+  -o-transform: rotate(-45deg);
+  -o-transform-origin: right top;
+  -moz-transform: rotate(-45deg);
+  -moz-transform-origin: right top;
+  transform: rotate(-45deg);
+  transform-origin: right top;
+}
+
 /******** MATRIX DATA STRUCTURE ****/
 .jsavmatrix .jsavarray {
   margin: 0 auto;
