Removed unnecessary semicolon

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -226,7 +226,7 @@
 .jsavmark {
   position: absolute;
   display: none;
-  background-color: #FF6464;;
+  background-color: #FF6464;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   -ms-border-radius: 10px;
