Edge layout moved to datastructures (from tree) where it belongs; label positioning improvements

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -476,6 +476,8 @@ a.jsavdialogclose {
 .jsavedgelabel {
   background-color: inherit;
   z-index: 700;
+  position: absolute;
+  display: inline-block;
 }
 
 /******** LINKED LIST STRUCTURE ******/
