--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -48,7 +48,7 @@
   width: 100%;
   min-height: inherit;
   min-width: inherit;
-  background-color: inherit;
+  background-color: transparent;
 }
 
 .jsavautoresize .jsavnode {
@@ -65,6 +65,10 @@
   min-height: 50px;
   padding: 0;
   clear:both;
+  -webkit-transform-style: preserve-3d;
+}
+.jsavarray * {
+  -webkit-transform-style: preserve-3d;
 }
 .jsavarray.jsavindexed {
   margin-bottom: 0;
@@ -144,7 +148,7 @@
 .jsavbararray .jsavvalue {
   z-index: 100;
   bottom: 0;
-  background-color: inherit;
+  background-color: transparent;
   min-height: 0;
   -moz-border-radius: 0;
   -o-border-radius: 0;
@@ -631,4 +635,9 @@ ul.jsavcode {
 .jsavquestionframe {
   width: 100%;
   height: 100%;
+}
+
+.jsavswap {
+  background-color: pink !important;
+  color: red !important;
 }
