--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -22,7 +22,6 @@
   width: 45px;
   height: 45px;
   text-align: center;
-  line-height: 45px;
   border: 1px solid black;
   background-color: white;
   color: black;
@@ -38,7 +37,7 @@
   margin-right: auto;
 }
 
-.jsavhighlight, .jsavhighlight .jsavvalue, .jsavarray.jsavbararray .jsavindex.jsavhighlight .jsavvalue{
+.jsavhighlight, .jsavarray.jsavbararray .jsavindex.jsavhighlight .jsavvalue{
   background-color: yellow !important;
   color: black !important;
 }
@@ -48,7 +47,13 @@
   width: 100%;
   min-height: inherit;
   min-width: inherit;
-  background-color: inherit;
+  background-color: transparent;
+  display: table;
+}
+
+.jsavvaluelabel {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .jsavautoresize .jsavnode {
@@ -84,7 +89,6 @@
 }
 .jsavindex span {
   z-index: 99;
-  display: inline-block;
 }
 .jsavhorizontalarray .jsavindex {
   display: inline-block;
@@ -162,7 +166,6 @@
 }
 .jsavbararray .jsavvalue, .jsavbararray .jsavvaluebar {
   display: block;
-  line-height: 20px;
   padding: 0;
   position: absolute;
   width: 100%;
@@ -588,7 +591,6 @@ ul.jsavcode {
   width: auto;
   min-width: 30px;
   font-size: 14px;
-  line-height: 30px;
   border-top: none;
 }
 .jsavmatrix .jsavarray:first-child li {
