--- a/_includes/subpages.html
+++ b/_includes/subpages.html
@@ -3,7 +3,7 @@
   {% for node in pages_list %}
   {% if node.title != null %}
   {% if node.layout == "subpage" and node.url contains page.url %}
-  <li><a href="{{ node.url }}">{{ node.title }}</a></li>
+  <li><a href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></li>
   {% endif %}
   {% endif %}
   {% endfor %}
