Added show example code functionality; added example to circle

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,5 @@
   <script src="{{ site.baseurl }}/public/jsav/jquery.transit.js"></script>
   <script src="{{ site.baseurl }}/public/jsav/raphael.js"></script>
   <script src="{{ site.baseurl }}/public/jsav/JSAV-min.js"></script>
+  <script src="{{ site.baseurl }}/public/jsavsite.js"></script>
 </head>
