--- a/public/css/jsavsite.css
+++ b/public/css/jsavsite.css
@@ -14,3 +14,39 @@ h3.apimethod {
 li.subpages {
   list-style: none;
 }
+
+
+/** styling the JSAV examples **/
+.example-link, script.visible, style.visible {
+  margin-bottom: 1em;
+}
+.example-link {
+  text-align: right;
+}
+script.visible, style.visible {
+  position: relative;
+  display: block;
+  font-family: "Courier New", monospace;
+  white-space: pre;
+  font-size: 0.9em;
+  padding: 1em;
+  overflow: scroll;
+  color: white;
+  background-color: #202020;
+}
+script.visible:before, style.visible:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: orange;
+  padding: 3px 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+script.visible:before {
+  content: "JavaScript";
+}
+style.visible:before {
+  content: "CSS";
+}
+/** end example styling **/
