Updated JSAV; added dagre to loaded JS files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,7 @@
   <script src="{{ site.baseurl }}/public/jsav/jquery-ui.min.js"></script>
   <script src="{{ site.baseurl }}/public/jsav/jquery.transit.js"></script>
   <script src="{{ site.baseurl }}/public/jsav/raphael.js"></script>
+  <script src="{{ site.baseurl }}/public/jsav/dagre.min.js"></script>
   <script src="{{ site.baseurl }}/public/jsav/JSAV-min.js"></script>
   <script src="{{ site.baseurl }}/public/jsavsite.js"></script>
 </head>
