--- a/public/css/jsavsite.css
+++ b/public/css/jsavsite.css
@@ -50,3 +50,20 @@ style.visible:before {
   content: "CSS";
 }
 /** end example styling **/
+
+
+/** styling of the google custom search component **/
+.sitesearch .gsc-search-box,
+.sitesearch .gsc-control-cse {
+  padding: 0;
+  margin: 0;
+}
+.sitesearch td.gsc-clear-button {
+  display: none;
+}
+.sitesearch {
+  margin: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
