Removed margins from jsavedgelabel

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -488,6 +488,7 @@ a.jsavdialogclose {
   z-index: 700;
   position: absolute;
   display: inline-block;
+  margin: 0;
 }
 
 /******** LINKED LIST STRUCTURE ******/
