Rounded the jsavlistnode corners slightly

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -523,6 +523,8 @@ a.jsavdialogclose {
 }
 .jsavlistnode {
   position: absolute;
+  border-radius: 3px;
+  overflow: hidden;
 }
 .jsavlist .jsavedge {
   stroke-width: 2;
