Removed overflow: hidden; from jsavlistnode CSS, and rounded the pointer area instead.

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -524,7 +524,14 @@ a.jsavdialogclose {
 .jsavlistnode {
   position: absolute;
   border-radius: 3px;
-  overflow: hidden;
+}
+.jsavverticallist .jsavlistnode .jsavpointerarea {
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+.jsavhorizontallist .jsavlistnode .jsavpointerarea {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 .jsavlist .jsavedge {
   stroke-width: 2;
