--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -31,6 +31,7 @@
   cursor: default;
   /* add a subtle shadow to nodes */
   box-shadow: 2px 2px 5px rgba(120, 120, 120, 0.5);
+  box-sizing: border-box;
 }
 .jsavcenter {
   margin-left: auto;
