--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -646,12 +646,16 @@ ul.jsavcode {
 }
 .jsavmatrix .jsavarray li.jsavnode {
   border-radius: 0;
-  min-height: 30px;
-  height: auto;
-  width: auto;
-  min-width: 30px;
+  width: 30px;
+  height: 30px;
   font-size: 14px;
   border-top: none;
+}
+.jsavmatrix .jsavarray.jsavautoresize li.jsavnode {
+  min-height: 30px;
+  min-width: 30px;
+  height: auto;
+  width: auto;
 }
 .jsavmatrix .jsavarray .jsavvalue {
   height: 30px;
