Tweak letter-spacing of begin/end buttons

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -331,6 +331,9 @@
 .jsavplaying span {
   cursor: default;
 }
+.jsavbegin, .jsavend {
+  letter-spacing: -2px;
+}
 /**** END STYLING THE CONTROLS ****/
 
 /**** STYLING THE DIALOG ****/
