Automatically add class jsavnonext to linked list nodes which don't have a next pointer. CSS to add a slash to such nodes.
See OpenDSA issue 280 (https://github.com/OpenDSA/OpenDSA/issues/280).

--- a/css/JSAV.css
+++ b/css/JSAV.css
@@ -575,6 +575,14 @@ a.jsavsettings:hover {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
+.jsavhorizontallist .jsavnonext .jsavpointerarea:after {
+    display: inline-block;
+    content: "";
+    height: 104%;
+    width: 1px;
+    background-color: #000;
+    transform: rotate(12deg);
+}
 .jsavlist .jsavedge {
   stroke-width: 2;
 }
